<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_skill_atoms</name>
  <version>0.1.0</version>
  <description>
    Primitive robot skill action servers (C++). Each skill is a ROS2 Action Server
    that self-registers its metadata with the SkillRegistry. Covers motion, perception,
    and manipulation primitives for the Meca500 + RealSense setup.
  </description>
  <maintainer email="dev@example.com">Robot Skills Framework</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_components</depend>
  <depend>robot_skills_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <!-- MoveIt2 -->
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_core</depend>
  <depend>moveit_msgs</depend>
  <!-- ros2_control -->
  <depend>control_msgs</depend>
  <depend>controller_manager_msgs</depend>
  <!-- Diagnostics -->
  <depend>diagnostic_updater</depend>
  <depend>diagnostic_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
