<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_skill_server</name>
  <version>0.1.0</version>
  <description>
    Python orchestrator for the Robot Skills Framework. Provides:
    - SkillRegistry: central catalog of all available skills (atoms + compounds)
    - TaskComposer: generates BehaviorTree XML from skill step lists
    - BtExecutor: executes BT XML using pure Python tree executor with ROS2 actions
    - CompoundSkill persistence: agents can register new compound skills
    Agent-facing entry points: GetSkillDescriptions, ComposeTask,
    RegisterCompoundSkill, ExecuteBehaviorTree action.
  </description>
  <maintainer email="dev@example.com">Robot Skills Framework</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>robot_skills_msgs</depend>
  <depend>robot_skill_advertise</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>action_msgs</depend>
  <depend>diagnostic_updater</depend>
  <depend>diagnostic_msgs</depend>

  <exec_depend>python3-lxml</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>python3-jsonschema</exec_depend>

  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
