<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fr3_skill_server</name>
  <version>0.1.0</version>
  <description>
    Per-robot skill action server proxy for the Franka FR3. Hosts the 12
    arm skill action servers in one process (CheckSystemReady excludes the
    gripper_controller system since the FR3 hand is driven by franka_gripper,
    not ros2_control) and adds the FrankaGripperSkill atom. Publishes a
    single combined SkillManifest on /fr3_skill_server/skills.
  </description>
  <maintainer email="dev@example.com">Robot Skills Framework</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>rclcpp_components</exec_depend>
  <exec_depend>robot_skills_msgs</exec_depend>
  <exec_depend>robot_skill_advertise</exec_depend>
  <exec_depend>robot_arm_skills</exec_depend>
  <exec_depend>robot_skill_server</exec_depend>
  <exec_depend>franka_gripper_skill</exec_depend>
  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
